--- a/BLAZAM/Pages/Groups/CreateGroup.razor
+++ b/BLAZAM/Pages/Groups/CreateGroup.razor
@@ -73,7 +73,7 @@
 
     int selectedStep;
 
-   
+
 
 
 
@@ -89,17 +89,20 @@
         templates = await Context?.DirectoryTemplates.ToListAsync();
         await InvokeAsync(StateHasChanged);
     }
-    async void OUSelected(IADOrganizationalUnit ou)
+    async void OUSelected(IDirectoryEntryAdapter entry)
     {
-        if (parentOU == null)
+        if (entry is IADOrganizationalUnit ou)
         {
+            if (parentOU == null)
+            {
+                parentOU = ou;
+                return;
+            }
             parentOU = ou;
-            return;
+
+
+            await InvokeAsync(StateHasChanged);
         }
-        parentOU = ou;
-
-
-        await InvokeAsync(StateHasChanged);
     }
 
     async void CreateNewGroup()
