--- a/BLAZAM/Pages/Groups/CreateGroup.razor
+++ b/BLAZAM/Pages/Groups/CreateGroup.razor
@@ -11,7 +11,7 @@
                     
 
                         <OUTreeView Label="Parent Organizational Unit"
-                                    SelectedOUChanged="OUSelected">
+                                    SelectedEntryChanged="OUSelected">
                            @* <NodeContent>
                                 @context.Name
                             </NodeContent>*@
