--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -58,6 +58,7 @@
 @using BLAZAM.Gui.UI;
 @using BLAZAM.Gui.UI.Dashboard.Widgets;
 @using BLAZAM.Gui.UI.Inputs
+@using BLAZAM.Gui.UI.Inputs.TreeViews
 @using BLAZAM.Gui.Layouts;
 @using BLAZAM.Gui.UI.Settings;
 @using BLAZAM.Gui.UI.Chat
