Fixes for home drive in template

--- a/BLAZAMGui/UI/Users/Fields/HomeDriveSelect.razor
+++ b/BLAZAMGui/UI/Users/Fields/HomeDriveSelect.razor
@@ -20,7 +20,7 @@
 </MudSelect>
 
 @code {
-    private string _driveLetter="D";
+    private string _driveLetter="D:";
     [Parameter]
     public string DriveLetter
     {
