Change inherited permissions display to row

--- a/BLAZAMGui/UI/Settings/Permissions/PermissionMapEditor.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/PermissionMapEditor.razor
@@ -34,7 +34,7 @@
         }
         else
         {
-            <MudStack>
+            <MudStack Row=true>
                 @if (selectedPermissionDelegateNames != null)
                 {
                     @foreach (var pd in selectedPermissionDelegateNames.Split(SELECTION_DELIMITER))
