Fixed require password change option in "Set Password" modal

--- a/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
@@ -1,5 +1,5 @@
 ﻿@inherits AppModalContent
-<MudContainer MaxWidth="MaxWidth.Large"> 
+<MudContainer MaxWidth="MaxWidth.Large">
     <MudTextField Label="@AppLocalization["Username"]" @bind-Value="@User.SamAccountName" Disabled=true />
 
 
@@ -14,10 +14,10 @@
 
     <MudTooltip Text=@AppLocalization["Require the user to change their password at next logon"]>
         <MudSwitch T="bool" @ref=requireChangeSwitch>@AppLocalization["Require change"]</MudSwitch>
-    </MudTooltip>
+        </MudTooltip>
 
-</MudContainer>
-@code {
+    </MudContainer>
+    @code {
 #nullable disable warnings
     string newPassword = "";
     string newPasswordConfirm = "";
@@ -46,10 +46,21 @@
                 if (User.SetPassword(newPassword.ToSecureString(), requireChangeSwitch.Value))
                 {
 
+                    if (requireChangeSwitch.Value)
+                    {
+                        User.RequirePasswordChange = true;
+                        var job = await User.CommitChangesAsync();
+                        if (job.Result != JobResult.Passed)
+                        {
 
+                            Loggers.ActiveDirectryLogger.Error("Could not set password change required when setting password.");
+
+                        }
+                    }
                     SnackBarService.Success("Changed password for " + User.DisplayName);
                     await AuditLogger.User.PasswordChanged(User, requireChangeSwitch.Value);
                     await InvokeAsync(Close);
+
 
                 }
                 else
