Fix for possible null exception while checking AD status

--- a/BLAZAMGui/UI/Settings/ActiveDirectoryStatusPanel.razor
+++ b/BLAZAMGui/UI/Settings/ActiveDirectoryStatusPanel.razor
@@ -33,10 +33,11 @@
     <MudStack Row=true Class="align-center">
         @AppLocalization["Connection Type"]
 
-        <StatusCheck Status=@(Directory.AppRootDirectoryEntry.AuthenticationType.Equals(AuthenticationTypes.Encryption)||
+        <StatusCheck Status=@(Directory.AppRootDirectoryEntry !=null &&(
+            Directory.AppRootDirectoryEntry.AuthenticationType.Equals(AuthenticationTypes.Encryption)||
         Directory.AppRootDirectoryEntry.AuthenticationType.Equals(AuthenticationTypes.SecureSocketsLayer)||
-        Directory.AppRootDirectoryEntry.AuthenticationType.Equals(AuthenticationTypes.Secure))
-        Text="@(Directory.AppRootDirectoryEntry.AuthenticationType.ToString())" />
+        Directory.AppRootDirectoryEntry.AuthenticationType.Equals(AuthenticationTypes.Secure)))
+        Text="@(Directory.AppRootDirectoryEntry?.AuthenticationType.ToString())" />
 
 
     </MudStack>
