Fix for not being able to remove group members without edit access #357

--- a/BLAZAM/Pages/Groups/ViewGroup.razor
+++ b/BLAZAM/Pages/Groups/ViewGroup.razor
@@ -87,7 +87,7 @@
                     </Section>
                 </MudItem>
                 <MudItem xs="12" md="6">
-                    <Section Style="min-height:200px;" Title=@AppLocalization["Member Of"]>
+                    <Section Style="min-height:200px;" Title=@AppLocalization["Parent Groups"]>
                         <MemberOfList Model="Group" />
 
                     </Section>
